[package]
name = "gains"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["ws"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
ethers = "2.0.14"
heck = "0.5.0"
