[package]
name = "gmx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
ethers = { version = "2.0.14", features = ["ws"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full", "tracing"] }

[build-dependencies]
ethers = "2.0.14"
heck = "0.5.0"
