[package]
name = "pyth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
futures = "0.3.30"
